--- a/NeuroApp/Presentation/History/HistoryMain/View/HistoryMainTableViewCell/HistoryMainTableViewCell.xib
+++ b/NeuroApp/Presentation/History/HistoryMain/View/HistoryMainTableViewCell/HistoryMainTableViewCell.xib
@@ -12,75 +12,82 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="HistoryMainTableViewCell" customModule="NeuroApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="115" id="KGk-i7-Jjw" customClass="HistoryMainTableViewCell" customModule="NeuroApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="353" height="96"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
+                <rect key="frame" x="0.0" y="0.0" width="353" height="96"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="llc-wc-sW5">
-                        <rect key="frame" x="-102" y="453" width="240" height="128"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Byn-Sw-6VU">
+                        <rect key="frame" x="0.0" y="0.0" width="353" height="76"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmb-hA-sjO">
+                                <rect key="frame" x="10" y="26" width="70.5" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" systemColor="systemGray2Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uqn-AN-6bp">
+                                <rect key="frame" x="101.5" y="26" width="48" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" systemColor="systemGray2Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="giR-ue-fpA">
+                                <rect key="frame" x="323" y="30.5" width="20" height="15"/>
+                                <color key="tintColor" systemColor="systemGray2Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="giR-ue-fpA" secondAttribute="height" multiplier="1:1" id="o0J-pc-YSc"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKK-sI-JC7">
+                                <rect key="frame" x="159.5" y="26" width="48" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bhw-rB-bDc">
+                                <rect key="frame" x="90.5" y="12.5" width="1" height="51"/>
+                                <color key="backgroundColor" name="NAGray"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1" id="w9I-HU-bc6"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bhw-rB-bDc">
-                        <rect key="frame" x="74" y="5" width="1" height="46"/>
-                        <color key="backgroundColor" name="NAGray"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="1" id="w9I-HU-bc6"/>
+                            <constraint firstItem="eKK-sI-JC7" firstAttribute="centerY" secondItem="Qmb-hA-sjO" secondAttribute="centerY" id="1ZM-EU-J0y"/>
+                            <constraint firstAttribute="trailing" secondItem="giR-ue-fpA" secondAttribute="trailing" constant="10" id="47B-bx-QJl"/>
+                            <constraint firstItem="bhw-rB-bDc" firstAttribute="centerY" secondItem="Qmb-hA-sjO" secondAttribute="centerY" id="FfQ-Gf-KMp"/>
+                            <constraint firstItem="Qmb-hA-sjO" firstAttribute="width" secondItem="Byn-Sw-6VU" secondAttribute="width" multiplier="1:5" id="Nlb-CA-1Kz"/>
+                            <constraint firstItem="uqn-AN-6bp" firstAttribute="centerY" secondItem="Qmb-hA-sjO" secondAttribute="centerY" id="NmC-wr-Dh4"/>
+                            <constraint firstItem="bhw-rB-bDc" firstAttribute="height" secondItem="Byn-Sw-6VU" secondAttribute="height" multiplier="0.67" id="fs6-Ws-ttD"/>
+                            <constraint firstItem="Qmb-hA-sjO" firstAttribute="centerY" secondItem="Byn-Sw-6VU" secondAttribute="centerY" id="gJB-2H-evt"/>
+                            <constraint firstItem="uqn-AN-6bp" firstAttribute="leading" secondItem="bhw-rB-bDc" secondAttribute="trailing" constant="10" id="kb4-4Z-fTo"/>
+                            <constraint firstItem="bhw-rB-bDc" firstAttribute="leading" secondItem="Qmb-hA-sjO" secondAttribute="trailing" constant="10" id="lrw-E9-niT"/>
+                            <constraint firstItem="giR-ue-fpA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="eKK-sI-JC7" secondAttribute="trailing" constant="10" id="qE4-tN-pV8"/>
+                            <constraint firstItem="eKK-sI-JC7" firstAttribute="leading" secondItem="uqn-AN-6bp" secondAttribute="trailing" constant="10" id="rKN-34-Xh4"/>
+                            <constraint firstItem="Qmb-hA-sjO" firstAttribute="leading" secondItem="Byn-Sw-6VU" secondAttribute="leading" constant="10" id="uqL-FU-QyX"/>
+                            <constraint firstItem="giR-ue-fpA" firstAttribute="centerY" secondItem="Qmb-hA-sjO" secondAttribute="centerY" id="vEw-cx-8aX"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmb-hA-sjO">
-                        <rect key="frame" x="5" y="16" width="64" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <color key="textColor" systemColor="systemGray2Color"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uqn-AN-6bp">
-                        <rect key="frame" x="85" y="16" width="48" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <color key="textColor" systemColor="systemGray2Color"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="giR-ue-fpA">
-                        <rect key="frame" x="281.5" y="13.5" width="33.5" height="29"/>
-                        <color key="tintColor" systemColor="systemGray2Color"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="giR-ue-fpA" secondAttribute="height" multiplier="1:1" id="o0J-pc-YSc"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKK-sI-JC7">
-                        <rect key="frame" x="138" y="16" width="48" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <color key="textColor" systemColor="systemGrayColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Qmb-hA-sjO" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="1:5" id="2Ph-l4-7R6"/>
-                    <constraint firstItem="Qmb-hA-sjO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="59w-Wt-axQ"/>
-                    <constraint firstItem="giR-ue-fpA" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.6" id="6zX-Z9-aC2"/>
-                    <constraint firstAttribute="trailing" secondItem="giR-ue-fpA" secondAttribute="trailing" constant="5" id="73l-Ca-ZD4"/>
-                    <constraint firstItem="uqn-AN-6bp" firstAttribute="centerY" secondItem="Qmb-hA-sjO" secondAttribute="centerY" id="9Q8-7D-2bp"/>
-                    <constraint firstItem="bhw-rB-bDc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="F09-Tg-AZY"/>
-                    <constraint firstItem="Qmb-hA-sjO" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="V5M-Z8-VrT"/>
-                    <constraint firstItem="eKK-sI-JC7" firstAttribute="leading" secondItem="uqn-AN-6bp" secondAttribute="trailing" constant="5" id="VVW-oK-xfu"/>
-                    <constraint firstAttribute="bottom" secondItem="bhw-rB-bDc" secondAttribute="bottom" constant="5" id="dwp-EN-FHE"/>
-                    <constraint firstItem="giR-ue-fpA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="eKK-sI-JC7" secondAttribute="trailing" constant="10" id="iNu-0S-XNa"/>
-                    <constraint firstItem="eKK-sI-JC7" firstAttribute="centerY" secondItem="Qmb-hA-sjO" secondAttribute="centerY" id="ly3-by-HDl"/>
-                    <constraint firstItem="giR-ue-fpA" firstAttribute="centerY" secondItem="Qmb-hA-sjO" secondAttribute="centerY" id="pYR-Sv-WAN"/>
-                    <constraint firstItem="llc-wc-sW5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="bottom" constant="392" id="sdv-rz-bIU"/>
-                    <constraint firstItem="uqn-AN-6bp" firstAttribute="leading" secondItem="bhw-rB-bDc" secondAttribute="trailing" constant="10" id="ueD-R3-D9b"/>
-                    <constraint firstItem="bhw-rB-bDc" firstAttribute="leading" secondItem="Qmb-hA-sjO" secondAttribute="trailing" constant="5" id="zjw-yn-xms"/>
+                    <constraint firstAttribute="trailing" secondItem="Byn-Sw-6VU" secondAttribute="trailing" id="2PV-OL-CdZ"/>
+                    <constraint firstItem="Byn-Sw-6VU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="BsQ-Si-IK5"/>
+                    <constraint firstAttribute="bottom" secondItem="Byn-Sw-6VU" secondAttribute="bottom" constant="20" id="nHQ-6r-mKh"/>
+                    <constraint firstItem="Byn-Sw-6VU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="rth-k8-LlP"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="container" destination="Byn-Sw-6VU" id="r3i-i2-TaW"/>
                 <outlet property="dateLabel" destination="Qmb-hA-sjO" id="wbB-GM-sEX"/>
                 <outlet property="scoreTitleLabel" destination="uqn-AN-6bp" id="7Pv-5Z-fyu"/>
                 <outlet property="scoreValueLabel" destination="eKK-sI-JC7" id="QOH-GH-3lN"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="131.25"/>
+            <point key="canvasLocation" x="161.59420289855075" y="144.64285714285714"/>
         </tableViewCell>
     </objects>
     <resources>
