--- a/NeuroApp/Storyboard/History/MainHistory.storyboard
+++ b/NeuroApp/Storyboard/History/MainHistory.storyboard
@@ -53,7 +53,7 @@
                                                     <constraint firstAttribute="width" secondItem="J7q-u8-wLg" secondAttribute="height" multiplier="4:3" id="Wuu-UW-jTX"/>
                                                 </constraints>
                                             </view>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="snM-8J-yE5">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="snM-8J-yE5">
                                                 <rect key="frame" x="20" y="347" width="374" height="378"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </tableView>
