--- a/NeuroApp/Storyboard/Quiz/QuizPartOne.storyboard
+++ b/NeuroApp/Storyboard/Quiz/QuizPartOne.storyboard
@@ -166,11 +166,23 @@
                                     <constraint firstAttribute="height" constant="5" id="0gA-p5-vRw"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wqq-rf-2gk" customClass="ProgressBar" customModule="NeuroApp" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="34A-fc-9t3">
                                 <rect key="frame" x="30" y="768" width="354" height="30"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wqq-rf-2gk" customClass="ProgressBar" customModule="NeuroApp" customModuleProvider="target">
+                                        <rect key="frame" x="162" y="0.0" width="30" height="30"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" priority="1" constant="30" id="v1B-iZ-tHq"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="WnN-9x-9bM"/>
+                                    <constraint firstItem="Wqq-rf-2gk" firstAttribute="top" secondItem="34A-fc-9t3" secondAttribute="top" id="JMp-io-pbA"/>
+                                    <constraint firstAttribute="height" constant="30" id="QJp-Lg-lZU"/>
+                                    <constraint firstItem="Wqq-rf-2gk" firstAttribute="centerX" secondItem="34A-fc-9t3" secondAttribute="centerX" id="iTA-4h-i2N"/>
+                                    <constraint firstAttribute="bottom" secondItem="Wqq-rf-2gk" secondAttribute="bottom" id="mah-eZ-zK8"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -179,13 +191,14 @@
                         <constraints>
                             <constraint firstItem="t42-1U-WYX" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="1zR-gW-wVR"/>
                             <constraint firstItem="Bbd-Fc-PJj" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="2Y0-mt-H7t"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="34A-fc-9t3" secondAttribute="trailing" constant="30" id="2yO-V4-kzS"/>
                             <constraint firstItem="zGR-cF-CB4" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="3Bt-ME-Ea1"/>
                             <constraint firstItem="Bbd-Fc-PJj" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="4yt-vk-Irs"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="GHD-mw-2po" secondAttribute="trailing" constant="20" id="7Sv-yB-S1a"/>
+                            <constraint firstItem="t42-1U-WYX" firstAttribute="top" secondItem="34A-fc-9t3" secondAttribute="bottom" constant="10" id="8Jg-2U-FlC"/>
                             <constraint firstItem="GHD-mw-2po" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="EQ6-R0-NYO"/>
                             <constraint firstItem="GHD-mw-2po" firstAttribute="top" secondItem="09e-Jy-04b" secondAttribute="bottom" constant="20" id="FCe-5U-YC0"/>
                             <constraint firstItem="KgL-tj-cQ7" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Gtk-US-d4K"/>
-                            <constraint firstItem="t42-1U-WYX" firstAttribute="top" secondItem="Wqq-rf-2gk" secondAttribute="bottom" constant="10" id="Ouy-cS-yln"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="t42-1U-WYX" secondAttribute="trailing" constant="20" id="WkS-zB-hJR"/>
                             <constraint firstItem="KgL-tj-cQ7" firstAttribute="top" secondItem="zGR-cF-CB4" secondAttribute="bottom" constant="40" id="cK6-Te-vxR"/>
                             <constraint firstItem="Bbd-Fc-PJj" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="e2E-S7-ak7"/>
@@ -193,10 +206,9 @@
                             <constraint firstItem="zGR-cF-CB4" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="gmt-MO-Pb9"/>
                             <constraint firstItem="KgL-tj-cQ7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="guW-fy-rg8"/>
                             <constraint firstItem="zGR-cF-CB4" firstAttribute="top" secondItem="GHD-mw-2po" secondAttribute="bottom" constant="20" id="iuN-Kf-z8Q"/>
+                            <constraint firstItem="34A-fc-9t3" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="kFM-cf-LxC"/>
                             <constraint firstItem="09e-Jy-04b" firstAttribute="top" secondItem="Bbd-Fc-PJj" secondAttribute="bottom" constant="20" id="osF-3t-Czw"/>
-                            <constraint firstItem="Wqq-rf-2gk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="p4G-Vo-N5S"/>
                             <constraint firstItem="09e-Jy-04b" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="tJh-Kh-3eY"/>
-                            <constraint firstItem="Wqq-rf-2gk" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="vC2-YF-jMb"/>
                             <constraint firstItem="09e-Jy-04b" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="y6p-mz-lAR"/>
                         </constraints>
                     </view>
