--- a/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
+++ b/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
@@ -53,11 +53,23 @@
                                     <constraint firstAttribute="height" constant="5" id="UFo-pW-yaG"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J2u-At-gcT" customClass="ProgressBar" customModule="NeuroApp" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fAg-tO-HnR">
                                 <rect key="frame" x="30" y="768" width="354" height="30"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J2u-At-gcT" customClass="ProgressBar" customModule="NeuroApp" customModuleProvider="target">
+                                        <rect key="frame" x="162" y="0.0" width="30" height="30"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" priority="1" constant="30" id="m4z-lJ-aV9"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="IDS-IO-0qL"/>
+                                    <constraint firstAttribute="bottom" secondItem="J2u-At-gcT" secondAttribute="bottom" id="ar4-dO-xcK"/>
+                                    <constraint firstAttribute="height" constant="30" id="bXq-1L-MA1"/>
+                                    <constraint firstItem="J2u-At-gcT" firstAttribute="centerX" secondItem="fAg-tO-HnR" secondAttribute="centerX" id="bfK-58-oOF"/>
+                                    <constraint firstItem="J2u-At-gcT" firstAttribute="top" secondItem="fAg-tO-HnR" secondAttribute="top" id="mg4-Lq-M9n"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -66,17 +78,17 @@
                         <constraints>
                             <constraint firstItem="cUP-Lg-hUv" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="42c-L9-bZO"/>
                             <constraint firstItem="TRS-2p-kCH" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="6Cc-S6-JxM"/>
-                            <constraint firstItem="RLy-jn-RqY" firstAttribute="top" secondItem="J2u-At-gcT" secondAttribute="bottom" constant="10" id="6eA-yo-1N2"/>
                             <constraint firstItem="TRS-2p-kCH" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="7f1-kR-42Y"/>
                             <constraint firstItem="gxw-Jk-1xZ" firstAttribute="top" secondItem="cUP-Lg-hUv" secondAttribute="bottom" constant="20" id="A1S-MK-BxZ"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="J2u-At-gcT" secondAttribute="trailing" constant="30" id="CXi-pD-5Ls"/>
+                            <constraint firstItem="RLy-jn-RqY" firstAttribute="top" secondItem="fAg-tO-HnR" secondAttribute="bottom" constant="10" id="Bhz-Uz-M1m"/>
                             <constraint firstItem="TRS-2p-kCH" firstAttribute="top" secondItem="gxw-Jk-1xZ" secondAttribute="bottom" constant="30" id="DU7-nw-pwi"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="RLy-jn-RqY" secondAttribute="trailing" constant="20" id="EPO-Qv-YUe"/>
                             <constraint firstItem="cUP-Lg-hUv" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="OcC-w8-1sR"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gxw-Jk-1xZ" secondAttribute="trailing" constant="20" id="S02-x1-P9z"/>
                             <constraint firstItem="gxw-Jk-1xZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="ZnU-tN-rHU"/>
-                            <constraint firstItem="J2u-At-gcT" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="cXz-s8-ht8"/>
+                            <constraint firstItem="fAg-tO-HnR" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="bgR-I7-3Oa"/>
                             <constraint firstItem="RLy-jn-RqY" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="esG-h7-BKm"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="fAg-tO-HnR" secondAttribute="trailing" constant="30" id="gTA-oS-Zxb"/>
                             <constraint firstItem="RLy-jn-RqY" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="iSR-Rh-jOk"/>
                             <constraint firstItem="cUP-Lg-hUv" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="50" id="wVK-MR-3N8"/>
                         </constraints>
